feat: script 위치 /body 밑으로

--- a/src/main/resources/templates/boardPosts.html
+++ b/src/main/resources/templates/boardPosts.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header}">
-    <script src="/js/board_postList.js"></script>
-</head>
+<head th:replace="~{fragments/header :: header}"></head>
 <body class="h-full flex flex-col">
 <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div>
 <br>
@@ -118,5 +116,6 @@
 <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
 <script src="/js/footer.js"></script>
+<script src="/js/board_postList.js"></script>
 </html>
 
