--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -32,7 +32,9 @@
         </div>
 
         <div class="w-full md:w-[37%] w-90% mb-10 md:m-10 bg-gray-50 p-6 shadow-xl rounded-lg flex-shrink-0" style="align-self: flex-start;">
-            <div class="flex flex-row justify-start">
+
+<!--            여행 후기 게시판에만 평균 평점 출력-->
+            <div class="flex flex-row justify-start" th:if="${post.board.boardCategory == '여행후기'}">
                 <p class="font-bold text-gray-500 mr-2" th:text="${averageRating == 0.0} ? '등록된 평점이 없습니다!' : '평균 평점 : ' + ${averageRating}"></p>
                 <div th:if="${averageRating != 0.0}" class="flex flex-row justify-start align-center">
                     <img th:each="i : ${#numbers.sequence(1, averageRating)}" src="/images/full_star.png" style="width: 20px; height: 20px" class="flex flex-inline"/>
@@ -57,16 +59,17 @@
                 <label th:for="content" class="block text-lg font-semibold mb-2"><strong>댓글 작성</strong></label>
 
                 <div class="flex flex-col">
-                    <input type="text" th:field="*{memberId}" placeholder="멤버 id" required />
-
-                    <label for="rating" class="block text-sm text-gray-700 mb-1">평점</label>
-                    <select th:field="*{rating}" id="rating" class="border border-gray-300 rounded-lg p-2 mb-2" style="max-width: 120px;">
-                        <option value="5">★★★★★</option>
-                        <option value="4">★★★★☆</option>
-                        <option value="3">★★★☆☆</option>
-                        <option value="2">★★☆☆☆</option>
-                        <option value="1">★☆☆☆☆</option>
-                    </select>
+<!--                    여행후기 게시판에만 평점 등록-->
+                    <div th:if="${post.board.boardCategory == '여행후기'}">
+                        <label for="rating" class="block text-sm text-gray-700 mb-1">평점</label>
+                        <select th:field="*{rating}" id="rating" class="border border-gray-300 rounded-lg p-2 mb-2" style="max-width: 120px;">
+                            <option value="5">★★★★★</option>
+                            <option value="4">★★★★☆</option>
+                            <option value="3">★★★☆☆</option>
+                            <option value="2">★★☆☆☆</option>
+                            <option value="1">★☆☆☆☆</option>
+                        </select>
+                    </div>
 
                     <textarea th:field="*{content}" class="flex-1 border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 mb-2" placeholder="작성 내용을 입력하세요" rows="5" required></textarea>
 
@@ -117,9 +120,11 @@
                 <div class="flex-1">
                     <div class="flex flex-row justify-between items-center">
 
+
                         <div class="flex flex-row items-center">
                             <p class="font-bold mt-1 mb-2" th:text="${comment.getMember().name}"></p>
-                            <div class="ml-2 flex flex-row items-center">
+<!--                            여행후기 게시판에만 평점 출력-->
+                            <div class="ml-2 flex flex-row items-center" th:if="${post.board.boardCategory == '여행후기'}">
                                 <img th:each="i : ${#numbers.sequence(1, comment.getRating())}" src="/images/full_star.png" class="w-5 h-5 -translate-y-1"/>
                                 <img th:each="i : ${#numbers.sequence(comment.getRating() + 1, 5)}" src="/images/empty_star.png" class="w-5 h-5 -translate-y-1" th:if="${comment.getRating() < 5}"/>
                             </div>
@@ -149,10 +154,10 @@
                                 </div>
                             </div>
 
-                            <!-- 아직은 정보 일치하는 회원만 수정, 삭제만 가능함 (추후에 관리자도 가능?)-->
+                            <!-- 로그인 정보 일치하는 회원만 수정, 삭제 가능함-->
                             <div class="flex justify-end mt-2 mb-1">
                                 <p th:if="${loginMember != null and loginMember == comment.member.id}">
-                                    <a th:href="@{/post/{postId}/comment/update/{commentId}(postId=${postId}, commentId=${comment.id})}">
+                                    <a th:href="@{/boards/{regionMajor}/posts/{postId}/comments/{commentId}(regionMajor=${regionMajor}, postId=${postId}, commentId=${comment.id})}">
                                         <span class="material-symbols-outlined" style="color: blue">edit_note</span>
                                     </a>
                                     <button type="button" onclick="deleteComment(this)" th:data-id="${comment.id}">
@@ -171,7 +176,8 @@
                                     ${#temporals.format(comment.createdAt, 'yyyy-MM-dd HH:mm')} : ${'(수정) ' + #temporals.format(comment.createdAt, 'yyyy-MM-dd HH:mm')}"></span>
                     </div>
 
-                    <div th:id="'replyContainer-' + ${comment.id}" th:data-login-member-id="${loginMember}" class="mt-10 border border-gray-300 rounded-lg p-4" style="display: none;"></div> <!-- 기본적으로 숨김 -->
+                    <div th:id="'replyContainer-' + ${comment.id}" th:data-login-member-id="${loginMember}" th:data-region-major="${regionMajor}" th:data-post-id="${post.postId}"
+                         class="mt-10 border border-gray-300 rounded-lg p-4" style="display: none;"></div> <!-- 기본적으로 숨김 -->
 
                 </div>
             </div>
