--- a/src/main/resources/templates/reply_update.html
+++ b/src/main/resources/templates/reply_update.html
@@ -11,7 +11,7 @@
 <div class="h-full flex justify-center">
 
     <main class="flex justify-center items-center w-[90%] bg-gray-100 rounded-md">
-        <form class="m-5 p-6 w-full" th:object="${replyUpdateDto}" th:data-post-id="${postId}" th:data-reply-id="${replyId}">
+        <form class="m-5 p-6 w-full" th:object="${replyUpdateDto}" th:data-post-id="${postId}" th:data-reply-id="${replyId}" th:data-region-major="${regionMajor}">
             <div class="flex flex-col">
                 <textarea th:field="*{content}" class="flex-1 border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 mb-2" placeholder="작성 내용을 입력하세요" rows="5" required></textarea>
 
