feat: 파일 업로드 관련 출력 내용 변경

--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -75,7 +75,7 @@
 
                     <div class="mb-2">
                         <input type="file" th:field="*{photos}" multiple id="file-input" class="hidden" />
-                        <span class="text-sm text-gray-500 mt-2 block">최대 5개 파일 선택 가능</span>
+                        <span class="text-sm text-gray-500 mt-2 block">최대 5개 사진 업로드 가능, 각 사진은 16MB 이하만 가능</span>
                         <div id="file-info" class="mt-2 text-gray-500"></div>
 
                         <div class="flex flex-row justify-between">
