--- a/src/main/resources/templates/boardPosts.html
+++ b/src/main/resources/templates/boardPosts.html
@@ -10,12 +10,21 @@
         <h1 class="text-3xl font-bold mb-6" th:text="${regionMajor} + ' 게시판'"></h1>
 
         <div class="mb-4 flex space-x-4">
+            <!--게시판 주요지역 선택-->
+            <select id="regionMajorSelect" class="p-2 border rounded">
+                <option th:each="major : ${allRegionMajors}"
+                        th:value="${major}"
+                        th:text="${major}"
+                        th:selected="${major == regionMajor}"></option>
+            </select>
+            <!--검색 분야 선택-->
             <select id="searchTypeSelect" class="p-2 border rounded">
                 <option value="">모두</option>
                 <option value="title">제목</option>
                 <option value="content">내용</option>
                 <option value="regionMiddle">지역</option>
             </select>
+             <!--검색창 + 검색 버튼-->
             <input type="text" id="searchInput" placeholder="검색어 입력" class="p-2 border rounded w-1/2"
                    th:value="${keyword}">
             <button id="searchBtn" class="bg-blue-500 text-white px-4 py-2 rounded">검색</button>
@@ -36,7 +45,7 @@
             </div>
 
             <div>
-                <a th:href="@{/boards/{regionMajor}/post-new(regionMajor=${regionMajor})}"
+                <a th:href="@{/boards/{regionMajor}/posts/post-new(regionMajor=${regionMajor})}"
                    class="bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600 transition duration-200">
                     작성
                 </a>
@@ -47,18 +56,18 @@
         <table class="w-full border-collapse border">
             <thead>
             <tr class="bg-gray-100">
-                <th class="border p-2" style="width: 5.88%;">번호</th> <!-- 1/17 -->
-                <th class="border p-2" style="width: 52.94%;">제목</th> <!-- 9/17 -->
-                <th class="border p-2" style="width: 5.88%;">작성자</th> <!-- 1/17 -->
-                <th class="border p-2" style="width: 11.76%;">작성일</th> <!-- 2/17 -->
-                <th class="border p-2" style="width: 5.88%;">조회수</th> <!-- 1/17 -->
-                <th class="border p-2" style="width: 5.88%;">추천수</th> <!-- 1/17 -->
+                <th class="border p-2" style="width: 5.88%;">번호</th> <!-- 1/15 -->
+                <th class="border p-2" style="width: 52.94%;">제목</th> <!-- 9/15 -->
+                <th class="border p-2" style="width: 5.88%;">작성자</th> <!-- 1/15 -->
+                <th class="border p-2" style="width: 11.76%;">작성일</th> <!-- 2/15 -->
+                <th class="border p-2" style="width: 5.88%;">조회수</th> <!-- 1/15 -->
+                <th class="border p-2" style="width: 5.88%;">추천수</th> <!-- 1/15 -->
             </tr>
             </thead>
             <tbody>
             <tr th:each="post : ${posts}"
                 class="cursor-pointer hover:bg-gray-100"
-                th:data-url="@{/boards/{regionMajor}/posts/{id}(regionMajor=${regionMajor}, id=${post.postId})}"
+                th:data-url="@{/boards/{regionMajor}/posts/{postId}(regionMajor=${regionMajor}, postId=${post.postId})}"
                 onclick="location.href = this.getAttribute('data-url')">
                 <td class="border p-2" th:text="${post.postId}"></td>
                 <td class="border p-2" th:text="${post.title}"></td>
