--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -46,7 +46,8 @@
             </div>
             <div class="flex justify-between mt-4">
                 <!--목록 버튼-->
-                <a th:href="@{/boards/{regionMajor}(regionMajor=${regionMajor})}" class="bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600 transition duration-200">목록</a>
+                <a th:href="@{/boards/{regionMajor}(regionMajor=${regionMajor})}"
+                   class="bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600 transition duration-200">목록</a>
                 <!--추천 버튼-->
                 <button th:if="${loginMember != null}"
                         type="button"
@@ -56,10 +57,19 @@
                     추천
                 </button>
 
+                <div>
+                    <!--수정 버튼-->
+                    <button th:onclick="|location.href='@{/boards/{regionMajor}/posts/post-modify/{postId}(regionMajor=${regionMajor},postId=${post.id})}'|"
+                            class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200 mr-2">수정</button>
+                    <!--삭제 버튼-->
+                    <button type="button" onclick="deletePost(this)" th:data-postId="${post.id}" th:data-region="${regionMajor}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition duration-200">삭제</button>
+                </div>
+            </div>
+        </div>
         <div class="w-full md:w-[37%] w-90% mb-10 md:m-10 bg-gray-50 p-6 shadow-xl rounded-lg flex-shrink-0" style="align-self: flex-start;">
 
-<!--            여행 후기 게시판에만 평균 평점 출력-->
-            <div class="flex flex-row justify-start" th:if="${post.board.boardCategory == '여행후기'}">
+            <!--            여행 후기 게시판에만 평균 평점 출력-->
+            <div class="flex flex-row justify-start" th:if="${post.boardCategory == '여행후기'}">
                 <p class="font-bold text-gray-500 mr-2" th:text="${averageRating == 0.0} ? '등록된 평점이 없습니다!' : '평균 평점 : ' + ${averageRating}"></p>
                 <div th:if="${averageRating != 0.0}" class="flex flex-row justify-start align-center">
                     <img th:each="i : ${#numbers.sequence(1, averageRating)}" src="/images/full_star.png" style="width: 20px; height: 20px" class="flex flex-inline"/>
@@ -84,8 +94,8 @@
                 <label th:for="content" class="block text-lg font-semibold mb-2"><strong>댓글 작성</strong></label>
 
                 <div class="flex flex-col">
-<!--                    여행후기 게시판에만 평점 등록-->
-                    <div th:if="${post.board.boardCategory == '여행후기'}">
+                    <!--                    여행후기 게시판에만 평점 등록-->
+                    <div th:if="${post.boardCategory == '여행후기'}">
                         <label for="rating" class="block text-sm text-gray-700 mb-1">평점</label>
                         <select th:field="*{rating}" id="rating" class="border border-gray-300 rounded-lg p-2 mb-2" style="max-width: 120px;">
                             <option value="5">★★★★★</option>
@@ -148,8 +158,8 @@
 
                         <div class="flex flex-row items-center">
                             <p class="font-bold mt-1 mb-2" th:text="${comment.getMember().name}"></p>
-<!--                            여행후기 게시판에만 평점 출력-->
-                            <div class="ml-2 flex flex-row items-center" th:if="${post.board.boardCategory == '여행후기'}">
+                            <!--                            여행후기 게시판에만 평점 출력-->
+                            <div class="ml-2 flex flex-row items-center" th:if="${post.boardCategory == '여행후기'}">
                                 <img th:each="i : ${#numbers.sequence(1, comment.getRating())}" src="/images/full_star.png" class="w-5 h-5 -translate-y-1"/>
                                 <img th:each="i : ${#numbers.sequence(comment.getRating() + 1, 5)}" src="/images/empty_star.png" class="w-5 h-5 -translate-y-1" th:if="${comment.getRating() < 5}"/>
                             </div>
