--- a/src/main/resources/templates/mainboard.html
+++ b/src/main/resources/templates/mainboard.html
@@ -1,24 +1,98 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header}"></head>
-<body class="h-screen flex flex-col">
+<body class="min-h-screen flex flex-col">
 <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div><br>
 
-<div class="h-full flex justify-center">
-    <!--이 div 태그 안에 본문 작성하시면 됩니다!-->
+<div class="flex-grow flex justify-center overflow-auto">
     <!-- 게시판 목록을 표시 -->
-    <div class="container mx-auto max-w-2xl px-4">
-        <h1 class="text-2xl font-bold mb-4 text-center">서울 여행지 목록</h1>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <div th:each="board, iterStat : ${board}"
-                 th:if="${iterStat.index < 3}"
-                 class="bg-white shadow-md rounded-lg overflow-hidden">
-                <img th:src="@{${board.imagePath}}" alt="이미지" class="w-full h-40 object-cover">
-                <div class="p-4">
-                    <h2 class="text-l font-semibold" th:text="${board.regionMajor} + ' - ' + ${board.regionMiddle}"></h2>
-                    <p class="text-gray-600 mt-2" th:text="${board.description}"></p>
+    <div class="container mx-auto max-w-4xl px-4 pb-20">
+        <!-- 게시판 추가 버튼 -->
+        <!--
+        <div class="flex justify-end mb-4">
+            <a href="/board/board-new" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                게시판 추가
+            </a>
+        </div>
+        -->
+
+        <!-- 검색창 추가 -->
+        <div class="flex justify-center mb-8">
+            <form action="/search" method="GET" class="w-full max-w-md">
+                <div class="flex items-center border-b border-teal-500 py-2">
+                    <input class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none" type="text" placeholder="떠나고 싶은 여행지를 찾아보세요!" aria-label="검색어">
+                    <button class="flex-shrink-0 bg-teal-500 hover:bg-teal-700 border-teal-500 hover:border-teal-700 text-sm border-4 text-white py-1 px-2 rounded" type="submit">
+                        검색
+                    </button>
                 </div>
-            </div>
+            </form>
+        </div>
+
+        <!-- 대분류 게시판 목록 -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <!-- 서울 -->
+            <a href="/board/seoul" class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="/images/regionmajor/seoul.jpg" alt="seoul" class="w-full h-40 object-cover">
+                <div class="p-4">
+                    <h2 class="text-l font-semibold text-center">서울</h2>
+                </div>
+            </a>
+            <!-- 경기 -->
+            <a href="/board/gyeonggi" class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="/images/regionmajor/gyeonggi.jpg" alt="gyeonggi" class="w-full h-40 object-cover">
+                <div class="p-4">
+                    <h2 class="text-l font-semibold text-center">경기</h2>
+                </div>
+            </a>
+            <!-- 부산 -->
+            <a href="/board/busan" class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="/images/regionmajor/busan.jpg" alt="busan" class="w-full h-40 object-cover">
+                <div class="p-4">
+                    <h2 class="text-l font-semibold text-center">부산</h2>
+                </div>
+            </a>
+            <!-- 인천 -->
+            <a href="/board/incheon" class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="/images/regionmajor/incheon.jpg" alt="incheon" class="w-full h-40 object-cover">
+                <div class="p-4">
+                    <h2 class="text-l font-semibold text-center">인천</h2>
+                </div>
+            </a>
+            <!-- 대구 -->
+            <a href="/board/daegu" class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="/images/regionmajor/daegu.jpg" alt="daegu" class="w-full h-40 object-cover">
+                <div class="p-4">
+                    <h2 class="text-l font-semibold text-center">대구</h2>
+                </div>
+            </a>
+            <!-- 대전 -->
+            <a href="/board/daejeon" class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="/images/regionmajor/daejeon.jpg" alt="daejeon" class="w-full h-40 object-cover">
+                <div class="p-4">
+                    <h2 class="text-l font-semibold text-center">대전</h2>
+                </div>
+            </a>
+            <!-- 광주 -->
+            <a href="/board/gwangju" class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="/images/regionmajor/gwangju.jpg" alt="gwangju" class="w-full h-40 object-cover">
+                <div class="p-4">
+                    <h2 class="text-l font-semibold text-center">광주</h2>
+                </div>
+            </a>
+            <!-- 울산 -->
+            <a href="/board/ulsan" class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="/images/regionmajor/ulsan.jpg" alt="ulsan" class="w-full h-40 object-cover">
+                <div class="p-4">
+                    <h2 class="text-l font-semibold text-center">울산</h2>
+                </div>
+            </a>
+            <!-- 제주 -->
+            <a href="/board/jeju" class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="/images/regionmajor/jeju.jpg" alt="jeju" class="w-full h-40 object-cover">
+                <div class="p-4">
+                    <h2 class="text-l font-semibold text-center">제주</h2>
+                </div>
+            </a>
         </div>
     </div>
 </div>
