--- a/src/main/resources/templates/middleboard.html
+++ b/src/main/resources/templates/middleboard.html
@@ -8,23 +8,10 @@
     <!-- 게시판 목록을 표시 -->
     <div class="container mx-auto max-w-4xl px-4 pb-20">
         <!-- 상단의 버튼 영역 -->
-        <!-- regionMajor 값을 사용하여 생성 페이지로 이동하는 링크를 수정 -->
         <div class="flex justify-end mb-4">
             <a th:href="@{'/' + ${regionMajor} + '/add-board'}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                 게시판 추가
             </a>
-        </div>
-
-        <!-- 검색창 추가 -->
-        <div class="flex justify-center mb-8">
-            <form action="/search" method="GET" class="w-full max-w-md">
-                <div class="flex items-center border-b border-teal-500 py-2">
-                    <input class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none" type="text" placeholder="떠나고 싶은 여행지를 찾아보세요!" aria-label="검색어">
-                    <button class="flex-shrink-0 bg-teal-500 hover:bg-teal-700 border-teal-500 hover:border-teal-700 text-sm border-4 text-white py-1 px-2 rounded" type="submit">
-                        검색
-                    </button>
-                </div>
-            </form>
         </div>
 
         <!-- 제목 동적으로 변경 -->
@@ -41,12 +28,47 @@
                         <p class="text-gray-600 mt-2" th:text="${board.description}"></p>
                     </div>
                 </a>
+                <!-- 수정하기 및 삭제하기 버튼 -->
+                <div class="flex justify-between p-4">
+                    <a th:href="@{'/' + ${board.regionMajor} + '/' + ${board.id} + '/updateboard'}" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-1 px-2 rounded">
+                        수정하기
+                    </a>
+                    <button onclick="confirmDelete([[${board.id}]])" class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded">
+                        삭제하기
+                    </button>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
 <div th:replace="~{fragments/footer :: footer}"></div>
-</body>
+
 <script src="/js/footer.js"></script>
+<script>
+    function confirmDelete(boardId) {
+        if (confirm('정말 삭제하시겠습니까?')) {
+            deleteBoard(boardId);
+        }
+    }
+
+    function deleteBoard(boardId) {
+        fetch(`/api/board-delete/${boardId}`, {
+            method: 'DELETE',
+        })
+            .then(response => {
+                if (response.ok) {
+                    alert('게시판이 삭제되었습니다.');
+                    window.location.reload(); // 페이지 새로고침하여 변경사항 반영
+                } else {
+                    alert('삭제에 실패했습니다.');
+                }
+            })
+            .catch(error => {
+                console.error('삭제 요청 중 오류 발생:', error);
+                alert('삭제 요청 중 오류가 발생했습니다.');
+            });
+    }
+</script>
+</body>
 </html>
